--- a/manifest.json
+++ b/manifest.json
@@ -12,13 +12,13 @@
   "categories": ["education", "productivity"],
   "icons": [
     {
-      "src": "/robot.png",
+      "src": "/white-logo.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/robot.png",
+      "src": "/white-logo.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable any"
@@ -32,7 +32,7 @@
       "url": "/?action=new-chat",
       "icons": [
         {
-          "src": "/robot.png",
+          "src": "/white-logo.png",
           "sizes": "96x96"
         }
       ]
@@ -40,13 +40,13 @@
   ],
   "screenshots": [
     {
-      "src": "/robot.png",
+      "src": "/white-logo.png",
       "sizes": "1280x720",
       "type": "image/png",
       "form_factor": "wide"
     },
     {
-      "src": "/robot.png",
+      "src": "/white-logo.png",
       "sizes": "750x1334",
       "type": "image/png",
       "form_factor": "narrow"
